tests/invalid/Contractive_Invalid_2.whiley
type Point is {
    (Point,Point) f
}

function toString(int p) -> Point:
    return null

